--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <p class="hero-subheadline">Premium Quality Sarees & Blouses at Affordable Prices</p>
             <div class="hero-buttons">
                 <button class="btn btn-primary" onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">🛍️ Shop Now</button>
-                <a href="tel:+919876543210" class="btn btn-secondary">📞 Call Now</a>
-                <a href="https://wa.me/919876543210" target="_blank" class="btn btn-whatsapp">💬 WhatsApp</a>
+                <a href="tel:+919630600986" class="btn btn-secondary">📞 Call Now</a>
+                <a href="https://wa.me/919630600986" target="_blank" class="btn btn-whatsapp">💬 WhatsApp</a>
             </div>
         </div>
     </section>
@@ -289,21 +289,21 @@
                             <i class="fas fa-phone"></i>
                             <div>
                                 <h4>Phone</h4>
-                                <a href="tel:+919876543210">+91 98765 43210</a>
+                                <a href="tel:+919630600986">+919630600986</a>
                             </div>
                         </div>
                         <div class="contact-method">
                             <i class="fas fa-whatsapp"></i>
                             <div>
                                 <h4>WhatsApp</h4>
-                                <a href="https://wa.me/919876543210" target="_blank">+91 98765 43210</a>
+                                <a href="https://wa.me/919630600986" target="_blank">+919630600986</a>
                             </div>
                         </div>
                         <div class="contact-method">
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h4>Email</h4>
-                                <a href="mailto:info@sanwariyasareesangrah.com">info@sanwariyasareesangrah.com</a>
+                                <a href="mailto: adarshmourya473@gmail.com">adarshmourya473@gmail.com</a>
                             </div>
                         </div>
                         <div class="contact-method">
@@ -345,7 +345,7 @@
             <div class="map-section">
                 <h3>Find Us On Map</h3>
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3668.4529999999997!2d76.35!3d24.85!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3968f5f5f5f5f5f5%3A0x5f5f5f5f5f5f5f5f!2sShivpuri%2C%20Madhya%20Pradesh!5e0!3m2!1sen!2sin!4v1234567890" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://maps.app.goo.gl/3w92tup8HD6rgTwx5" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -394,7 +394,7 @@
     </footer>
 
     <!-- Floating WhatsApp Button -->
-    <a href="https://wa.me/919876543210" class="whatsapp-float" title="Chat with us on WhatsApp">
+    <a href="https://wa.me/919630600986" class="whatsapp-float" title="Chat with us on WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
 
